@@ -54,7 +54,6 @@
   <li>Curtis Poe</li>
   <li>Jos&eacute; Castro</li>
   <li>Alexandra Gershman</li>
-  <li>Phillip Smith</li>
   <li>Jerry Franz</li>
   <li>Paul Hyland</li>
   <li>Frank Febbraro</li>
