@@ -51,4 +51,5 @@
   <li>Bret Dawson</li>
   <li>Rolf Schaufelberger</li>
   <li>Greg Heo</li>
+  <li>Phillip Smith</li>
 </ul>
